<resources>
    <string name="app_name">PorAquiRD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clinton_vella_brown">Clinton Vella Brown</string>
    <string name="_4_3_reviews">4.3 Reviews</string>
    <string name="muslim_town_lahore">Muslim Town Lahore</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_booklorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_booklorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen bookLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen bookLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="enter_the_regestration_email_and_we_will_send_you_a_confirmation_coden_to_reset_your_password">Enter The Regestration Email And We Will Send You A Confirmation Coden To Reset Your Password</string>
    <string name="email">Email</string>
    <string name="welcome_here">Welcome Here!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_your_username">Enter Your UserName</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login_status_shared_preference">com.example.realestate</string>
    <string name="UserEmail">Abc@gmail.com</string>
    <string name="UserPassword">abc</string>
    <string name="login_shared_preference">com.example.realestate</string>
    <string name="exit_title">Exit confirmation</string>
    <string name="exit_subtitle">Are You Sure To Exit?</string>
    <string name="notification_channel_id">default</string>
    <string name="admob_app_id">ca-app-pub-2514539521189562~4258320348</string>
    <string name="banner_home_footer">ca-app-pub-2514539521189562/3492033580</string>
    <string name="interstitial_full_screen">ca-app-pub-2514539521189562/9319075338</string>
    <string name="rewarded_video">ca-app-pub-2514539521189562/1987380225</string>
    <string name="open_app">ca-app-pub-2514539521189562/9351521464</string>
    <string name="add_data_title">Add New Projects</string>
    <string name="add_data_title_update">Update Projects</string>
    <string name="add_data_img_title">Feature Image</string>
    <string name="add_data_multiple_img_title">Multiple Image</string>
    <string name="add_data_button_text">Browse More</string>
    <string name="add_data_pd_title">Project Details</string>
    <string name="add_data_rb1">For rent</string>
    <string name="add_data_rb2">For Sale</string>
    <string name="add_data_sp_title">Select Property Type</string>
    <string name="add_data_tv_title">Title</string>
    <string name="add_data_et1_hint">Enter Title</string>
    <string name="add_data_tv2_title">Description</string>
    <string name="add_data_et2">Enter description</string>
    <string name="add_data_tv_price">Price</string>
    <string name="add_data_et3_hint">Enter Price</string>
    <string name="add_data_tv_location">Location</string>
    <string name="add_data_et4_hint">Enter Location</string>
    <string name="add_data_tv_city">City</string>
    <string name="add_data_tv_sector">Sector</string>
    <string name="add_data_et5_hint">Enter Sector</string>
    <string name="add_data_btn_submit">Submit</string>
    <string name="add_data_tv_details">More Details</string>
    <string name="add_data_tv_bedrooms">Bedrooms</string>
    <string name="add_data_tv_unit">Unit of Measure</string>
    <string name="add_data_et6_hint">Unit Of Measure</string>
    <string name="add_data_tv_pet_room">Pet Room</string>
    <string name="add_data_et7_hint">Pet rooms</string>
    <string name="add_data_tv_details2">More Details</string>
    <string name="add_data_tv_baths">Baths</string>
    <string name="add_data_tv_doc">Date of construction</string>
    <string name="add_data_et8_hint">Date of Construction</string>
    <string name="add_data_tv_parking_lot">Parking Lot</string>
    <string name="add_data_et9_hint">Parking Lot</string>
    <string name="add_data_cb_used">Used</string>
    <string name="add_data_cb_new">New</string>
    <string name="add_data_cb_new_project">New Project</string>
    <string name="cd_tv_details">Agent Detail</string>
    <string name="cd_tv_city">City</string>
    <string name="cd_tv_contact">Contact</string>
    <string name="cd_tv_company">Company</string>
    <string name="cd_tv_start_date">Start Date</string>
    <string name="cd_tv_reviews">Reviews</string>
    <string name="cd_tv_connector_properties">connector Properties</string>
    <string name="ad_tv_description_title">Description</string>
    <string name="ad_tv_description">Description</string>
    <string name="ad_btn_apointment">Get Apointment</string>
    <string name="ad_btn_info">Request Information</string>
    <string name="afp_tv_title">Forgot Password</string>
    <string name="afp_tv_forgot_password">Forgot Your Password</string>
    <string name="afp_tv_description">Enter The Regestration Email And We Will Send You A Confirmation Coden To Reset Your Password</string>
    <string name="afp_tv_email_title">Email</string>
    <string name="afp_et_email">Enter your regester email</string>
    <string name="afp_btn_continue">Continue</string>
    <string name="alo_tv_verification">Verification</string>
    <string name="alo_tv_description">We have sent you a code via SMS for mobile number verification</string>
    <string name="alo_btn_submit">Submit</string>
    <string name="alo_tv_resend">Resend</string>
    <string name="als_description">Fill the fields below to Login to your account</string>
    <string name="als_tv_email">Email</string>
    <string name="als_et_email">Enter Your Email</string>
    <string name="als_tv_forgot_password">Forget Password?</string>
    <string name="als_btn_login">Login</string>
    <string name="als_tv_create_account">Don\'t have an account? SIGN UP</string>
    <string name="als_tv_welcome_title">Welcome Here!</string>
    <string name="als_tv_password">Password</string>
    <string name="als_et_password">Enter Your Password</string>
    <string name="amr_tv_verification">Verification</string>
    <string name="amr_tv_description">We have sent you a code via SMS for mobile number verification</string>
    <string name="amr_btn_submit">Submit</string>
    <string name="amr_tv_resend">Resend</string>
    <string name="otp_reset_title">Forgot Password</string>
    <string name="otp_reset_tv_forgot_password">Forgot Your Password</string>
    <string name="otp_reset_description">Enter The Regestration Email And We Will Send You A Confirmation Coden To Reset Your Password</string>
    <string name="otp_reset_tv_confirmation">Did\'t Receive The Code?</string>
    <string name="otp_reset_tv_resend_code">Re-Send Code</string>
    <string name="otp_reset_btn_continue">Continue</string>
    <string name="otp_screen_tv_title">Verify User</string>
    <string name="otp_screen_verify_account">Verify Your Account</string>
    <string name="otp_screen_description">Enter The Regestration Email And We Will Send You A Confirmation Coden To Reset Your Password</string>
    <string name="otp_screen_tv_confirmation">Did\'t Receive The Code?</string>
    <string name="otp_screen_resend_code">Re-Send Code</string>
    <string name="otp_screen_btn_continue">Continue</string>
    <string name="ap_btn_restart_app">Restart App</string>
    <string name="ap_btn_close_app">Close App</string>
    <string name="ap_btn_description_app">Please make sure that you have  granted all permissions</string>
    <string name="ar_tv_title">Reviews</string>
    <string name="ar_tv_comments">Comments</string>
    <string name="ar_tv_description">Add your valuable review comment for this property</string>
    <string name="ar_et1_hint">comment Here !</string>
    <string name="ar_btn_submit">submit</string>
    <string name="arp_tv_title">Forgot Password</string>
    <string name="arp_tv_forgot_password">Forgot Your Password</string>
    <string name="arp_tv_description">Enter The Regestration Email And We Will Send You A Confirmation Coden To Reset Your Password</string>
    <string name="arp_tv_password_title">New Password</string>
    <string name="arp_et_password_hint">Password</string>
    <string name="arp_tv_confirm_password_title">Confirm New Password</string>
    <string name="arp_et_password_hint2">Password</string>
    <string name="arp_btn_continue">Continue</string>
    <string name="asu_tv_title">Welcome Here!</string>
    <string name="asu_tv_description">Fill the fields below to Login to your account</string>
    <string name="asu_tv_name_title">Name</string>
    <string name="asu_et_name_hint">Enter name</string>
    <string name="asu_tv_last_mobile_title">Mobile number</string>
    <string name="asu_et_last_mobile_hint">Enter Mobile number</string>
    <string name="asu_tv_email_title">Email</string>
    <string name="asu_et_email_hint">Enter Your Email</string>
    <string name="asu_tv_password_title">Password</string>
    <string name="asu_et_password_hint">Enter Your Password</string>
    <string name="asu_btn_register">Register</string>
    <string name="asu_tv_confirmation">Have an account? Login</string>
    <string name="abs_tv_info">How would you like to tour</string>
    <string name="abs_rb_via_meeting">Tour Via Meeting</string>
    <string name="abs_rb_via_video_chat">Tour Via Video Chat</string>
    <string name="abs_tv_pick_date_time"><![CDATA[Pick Date & Time]]></string>
    <string name="abs_et_date_hint">10-10-2020</string>
    <string name="abs_et_time_hint">12:10 PM</string>
    <string name="abs_btn_submit">Submit</string>
    <string name="cmr_tv_title">Mobile Number</string>
    <string name="cmr_tv_info">Enter your number we will send you a OTP to verify phone number</string>
    <string name="car_info">Enter your Feedback for Appointment</string>
    <string name="car_btn_accept">Accept</string>
    <string name="car_btn_reject">Reject</string>
    <string name="car_btn_change_appointment_date">change Appointment Date</string>
    <string name="car_et_date_hint">12-12-2020</string>
    <string name="car_et_time_hint">12:10 PM</string>
    <string name="car_btn_submit_date">Submit</string>
    <string name="cfb_tv_info">Enter your Desired number</string>
    <string name="cfb_et_comment_hint">Enter number</string>
    <string name="cfb_btn_submit">Submit</string>
    <string name="cfb_btn_cancel">Cancel</string>
    <string name="fat_tv_title">Your Appointments</string>
    <string name="fat_tv_title2">Other\'s Appointments</string>
    <string name="foa_tv_title">Appointments</string>
</resources>