<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/car_info"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        android:weightSum="2">

        <Button
            android:id="@+id/accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/round_button_alive"
            android:text="@string/car_btn_accept" />

        <Button
            android:id="@+id/reject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:text="@string/car_btn_reject" />


    </LinearLayout>


</LinearLayout>