<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    tools:context=".Activities.Permisions">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="@dimen/_20sdp"
        android:text="@string/ap_btn_description_app"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/restartbtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_above="@+id/closeapp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:background="@drawable/roundimage"
        android:text="@string/ap_btn_restart_app"
        android:textStyle="bold" />

    <Button
        android:id="@+id/closeapp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:background="@drawable/roundimage"
        android:text="@string/ap_btn_close_app"
        android:textStyle="bold" />

</RelativeLayout>