<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView

        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/car_info"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

    <EditText
        android:id="@+id/rejectionmessage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_margin="@dimen/_20sdp"
        android:hint="enter message"
        android:lines="3"
        android:maxLines="3" />

    <LinearLayout
        android:id="@+id/ll_changedate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_change_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/add_edittext_style_gray"
            android:clickable="true"
            android:editable="false"
            android:hint="@string/car_et_date_hint"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp" />

        <EditText
            android:id="@+id/et_change_time"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/add_edittext_style_gray"
            android:clickable="true"
            android:editable="false"
            android:hint="@string/car_et_time_hint"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">


        <Button
            android:id="@+id/reject"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:text="@string/car_btn_submit_date" />


    </LinearLayout>

    <TextView
        android:id="@+id/changeappointmentdate"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_weight="1"
        android:text="@string/car_btn_change_appointment_date"
        android:textColor="@color/aqua"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"

        />


</LinearLayout>