<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration.LoginScreen">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/login1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/als_tv_welcome_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeText"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/als_description"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_160sdp"
        android:background="@color/activity_background"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_14sdp">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_30sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/als_tv_email"
                    android:textColor="#141A25"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/linearLayout1">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="none"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/emailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/add_edittext_style"
                        android:hint="@string/als_et_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/_20sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:textColor="@android:color/black"
                        android:textColorHint="#737373" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/linearLayout2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/als_tv_password"
                    android:textColor="#141A25"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/linearLayout3">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="none"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/passwordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/add_edittext_style"
                        android:hint="@string/als_et_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/_20sdp"
                        android:textColor="@android:color/black"
                        android:textColorHint="#737373" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/btnforgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout4"
                android:layout_marginTop="10dp"
                android:onClick="GoForgetPassword"
                android:text="@string/als_tv_forgot_password" />

            <Button
                android:id="@+id/letTheUserLogIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/btnforgetpassword"

                android:layout_marginTop="20dp"
                android:background="@drawable/button_round"
                android:fontFamily="@font/poppins"
                android:text="@string/als_btn_login"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold"></Button>

            <TextView
                android:id="@+id/createaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/letTheUserLogIn"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:elevation="0dp"
                android:onClick="GoSignup"
                android:text="@string/als_tv_create_account"
                android:textColor="@android:color/black" />

            <RelativeLayout
                android:id="@+id/login_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/white_circle"
                android:elevation="8dp"
                android:padding="20dp"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true" />
            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>