<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Apointments_Tab">

    <FrameLayout
        android:id="@+id/apointmentframe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/headerlayut"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp">

                <ImageView
                    android:id="@+id/back_btn_apointment"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/back" />

                <TextView
                    android:id="@+id/tv_welcom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_toRightOf="@+id/back_btn_apointment"
                    android:text="@string/foa_tv_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />


                <ImageView
                    android:id="@+id/notification"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/notification" />


            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/headerlayut"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabIndicatorColor="@color/design_default_color_primary"
                app:tabMode="fixed"
                app:tabTextColor="#000000">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/yourappointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fat_tv_title" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/othersappointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fat_tv_title2" />

            </com.google.android.material.tabs.TabLayout>

            <FrameLayout
                android:id="@+id/appointment_Frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tab_layout"
               >

            </FrameLayout>
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>